syntax = "proto3";

package com.ai.recipe.user;

import "common.proto";

option java_package = "com.ai.recipe.user_service.proto"; 
option java_multiple_files = true;

service UserService {
  rpc CreateProfile(CreateProfileRequest) returns (CreateProfileResponse);
}

message CreateProfileRequest {
  com.ai.recipe.common.UserProfile profile = 1; // id + email only
}

message CreateProfileResponse {
  bool success = 1; // only success/failure
}
